Changes for 1.9.1

 - [ZBX-3248] fixed empty and duplicate map URL name handling (KB)
 - [ZBXNEXT-556] zabbix frontend translations are now handled by PHP gettext module (KB)
 - [ZBXNEXT-558] added support of monitoring auto-registered hosts with passive checks (Sasha)
 - [ZBX-3190] fixed sql errors when processing proxy configuration (asaveljevs,Sasha)
 - [DEV-471] fixed sql scripts names consistency (Sasha)
 - [ZBXNEXT-538] include ibm_db2 upgrade patches in distribution package (Sasha)
 - [ZBXNEXT-512] redesign of unknown events (Aly,asaveljevs,Sasha)
 - [ZBX-3130] fixed bug when creating custom graph: host items now can be added (KB)

Changes for 1.9.0

 - [DEV-477] added support of low-level discovery of file systems, network interfaces and SNMP OID's (Sasha,Vedmak)
 - [DEV-490] made graph legend optional (Aly)
 - [DEV-483] added templated screens (Aly)
 - [DEV-485] added multiple urls for map elements (Vedmak)
 - [DEV-471] field graph_theme.noneworktimecolor renamed to nonworktimecolor (Sasha)
 - [DEV-471] database integrity - added foreign keys (Sasha,Vedmak)
 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3223] it is now possible to gather network interface statistics under a normal user on OpenBSD; thanks to Robert Nagy (asaveljevs,Sasha)
 - [ZBX-3270] fixed server crash when processing calculated items with non-numeric user macros (asaveljevs)
 - [ZBXNEXT-564] added new {PROXY.NAME} and {HOSTNAME} macros for auto registration notifications (Sasha)
 - [ZBXNEXT-564] added support of {PROXY.NAME} macro for discovery and trigger notifications (Sasha)